--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	compile group: 'junit', name: 'junit', version: '4.12'
 	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
+	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.8.47'
+
 }
 
 test {
