Update to lombok 1.16.20

--- a/build.gradle
+++ b/build.gradle
@@ -16,18 +16,13 @@ apply plugin: 'jacoco'
 
 sourceCompatibility = 1.9
 
-configurations {
-    provided
-    compile.extendsFrom provided
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
 
-	provided group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
 
 	compile group: 'junit', name: 'junit', version: '4.12'
 	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
