--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,11 @@ apply plugin: 'jacoco'
 sourceCompatibility = 1.9
 
 repositories {
-    mavenCentral()
+	mavenCentral()
+}
+
+configurations {
+	testCompile.extendsFrom compileOnly
 }
 
 dependencies {
@@ -33,14 +37,14 @@ dependencies {
 
 test {
 	testLogging {
-        events "standardOut", "started", "passed", "skipped", "failed"
-    }
+		events "standardOut", "started", "passed", "skipped", "failed"
+	}
 }
 
 jacocoTestReport {
-    reports {
-        xml.enabled true
-    }
+	reports {
+		xml.enabled true
+	}
 }
 
 check.dependsOn jacocoTestReport
