--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,13 @@ configurations {
 }
 
 dependencies {
-
-	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+	annotationProcessor("org.projectlombok:lombok:1.18.4")
+	compileOnly("org.projectlombok:lombok:1.18.4")
 
 	compile group: 'junit', name: 'junit', version: '4.12'
 	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
 	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.8.47'
-
 }
 
 test {
