--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,17 @@ buildscript {
 	}
 }
 
+plugins {
+	id 'java'
+	id 'jacoco'
+	id 'eclipse'
+	id 'info.solidsoft.pitest' version '1.3.0'
+}
+
 group 'org.bvkatwijk.java.jasmine'
 description 'Java Jasmine'
 version '0.0.1'
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'jacoco'
 
 sourceCompatibility = 1.9
 targetCompatibility = 1.9
