--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
 }
 
 plugins {
-	id 'java'
-	id 'jacoco'
-	id 'eclipse'
-	id 'info.solidsoft.pitest' version '1.3.0'
+	id "java"
+	id "jacoco"
+	id "eclipse"
+	id "info.solidsoft.pitest" version "1.6.0"
 }
 
 group 'org.bvkatwijk.java.jasmine'
