--- a/build.gradle
+++ b/build.gradle
@@ -50,12 +50,12 @@ jacocoTestReport {
 check.dependsOn jacocoTestReport
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = 'sources'
+	classifier = "sources"
 	from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-	classifier = 'javadoc'
+	classifier = "javadoc"
 	from javadoc.destinationDir
 }
 
